# django-rrules

./: .gitignore  README.md  readme.rst  setup.py
django-rrules/: MANIFEST.in  setup.cfg
django-rrules/djangorrules/: admin.py  apps.py  models.py
django-rrules/djangorrules/migrations/: 0007_auto_20200622_2205.py  0009_auto_20200623_1651.py  0012_auto_20200627_1719.py
django-rrules/djangorrules/templates/djangorrules/: create-rule.html
djangorrules/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
djangorrules.egg-info/: PKG-INFO
djangorrules/migrations/: 0001_initial.py  0002_auto_20200620_2059.py  0003_auto_20200621_0416.py  0004_auto_20200621_0513.py  0005_auto_20200621_0623.py  0006_auto_20200621_0627.py  0007_auto_20200622_2205.py  0008_auto_20200623_1536.py  0010_auto_20200623_1651.py  0011_auto_20200626_0842.py  0012_auto_20200627_1719.py  0013_auto_20200628_0109.py  0014_auto_20200628_0119.py  0015_auto_20200628_0208.py  0016_auto_20200701_0624.py  0017_auto_20200701_2246.py  0018_auto_20200709_1850.py  0019_auto_20200709_1918.py  0020_auto_20200712_0103.py  0021_auto_20201209_1616.py
djangorrules/static/djangorrules/css/: main.css
djangorrules/static/djangorrules/js/: apps.js
djangorrules/templates/djangorrules/: create-rule.html
