[metadata]
name = django-rrules
version = 0.1
description = This a App based in [dateutil.rrule](https://github.com/dateutil/dateutil/) module to work with recurrence dates.
long_description = file: README.rst
url = https://github.com/agenteAND/django-rrules/
author = LuisSolis
author_email = luisalbertos2507@gmail.com
license = Apache 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: